Change database, from opensesarch to postgresql